# RTS

./: .gitignore  CMakeLists.txt
data/shaders/: blur.frag  outline_test.frag  remove_color.frag
src/: drawable.cpp  drawable.h  game_entity.cpp  game_entity.h  game_unit.cpp  game_unit.h  imgui_test.cpp  imgui_test.h  main.cpp  main2.cpp  test_runner.cpp  test_runner.h  unit_types.h  window_manager.cpp  window_manager.h
